fixed accessibilty and bug squash tab

--- a/api/manager/static/css/manager_base.css
+++ b/api/manager/static/css/manager_base.css
@@ -31,6 +31,11 @@
     }
 }
 
+.accessButton2 {
+    background-color: #fff0 !important;
+    border-color: #fff0 !important;
+}
+
 .secondaryButton {
     background-color: #ffffff;
     border-radius: 1rem;
